# triple-quote-clean

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/triple_quote_clean/: __init__.py
tests/: __init__.py  test_exponent.py  test_guide_character.py  test_query.py  test_rshift.py  test_tabs.py
triple_quote_clean/: __init__.py
